fixing form spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,6 +30,9 @@ footer{
       text-align: center;
 }
 
+.gap{
+      padding-top: 10px;
+}
 .profile {
      
      border-radius: 100%;
